--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "npm-check-updates": "^13.0.3"
   }
 }
