--- a/appApiRest/package.json
+++ b/appApiRest/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.7",
     "express": "^4.18.1",
-    "joi": "^17.6.0"
+    "joi": "^17.6.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
